my-intel-simics-project-1/logs/test/win64/modules/dmlc/test/scratch/1.2/errors/EASZR/EASZR.dmlc_stderr
C:\Users\nagen\simics-projects\my-intel-simics-project-1\modules\dmlc\test\1.2\errors\T_EASZR.dml:8:1: In b
C:\Users\nagen\simics-projects\my-intel-simics-project-1\modules\dmlc\test\1.2\errors\T_EASZR.dml:11:16: error EASZR: array size is less than 1
